--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ body {
     color: #000000;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 a {
     color: #77a466;
@@ -11,79 +14,114 @@ a {
 a:hover {
     color: #666;
     text-decoration: underline;
+
+
 }
 
-/***** GRID *****/
-.full-width {
-    width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
+.container {
+    display: flex;
+    justify-content: center;
+    /* align-items: center;  */
+    flex-flow: column;
+    padding: 0 26px;
 }
-.third-width {
-    width: 378px;
-    float: left;
-    height: 230px;
-}
+
 /***** HEADER SECTION *****/
 header {
     padding-top: 15px;
+    display: flex;
+    justify-content: center;
 }
 
 header h1 {
-    font-size: 30px;
-    float: left;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 4px solid #77a466;
+    padding-bottom: 20px;
+    letter-spacing: 0.12em;
 }
 header h1 span {
     color: #77a466;
 }
 nav {
-    float: right;
-    margin-top: 18px;
+    display: flex;
+    justify-content: center;
 }
 nav ul {
     list-style: none;
+    padding-left: 0;
 }
 nav ul li {
-    display: inline-block;
-    padding-left: 30px;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0 26px 0;
 }
 nav ul li a {
     font-weight: bold;
-    font-size: 14px;
+    font-size: 20px;
     text-transform: uppercase;
 }
 .banner {
     height: 287px;
-    background: url('../img/hero-image.png') no-repeat center #77a466;
+    background: url('../img/hero-image.png') no-repeat top #77a466;
     background-size: cover;
     border-top: 4px solid #77a466;
     border-bottom: 4px solid #77a466;
+    display: flex;
+    justify-content: center;
 }
 
 /***** SECTIONS *****/
 section {
     border-bottom: 1px solid #dedbdc;
+    display: flex;
+    justify-content: center;
 }
 section h2 {
-    font-size: 18px;
+    font-size: 24px;
+    line-height: 30px;
+    letter-spacing: 0.08em;
     color: #77a466;
     text-transform: uppercase;  
 }
 section h3 {
-    font-size: 12px;
+    font-size: 20px;
     text-transform: uppercase;
-    padding: 20px 0 10px 0;
+    letter-spacing: 0.08em;
+    /* padding: 20px 0 10px 0; */
 }
 .welcome {
     padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    border-bottom: 1px solid #dedbdc;
 }
-.reviews, .contact {
-    padding-left: 30px;
-    border-left: 1px solid #dedbdc;
+.welcome p {
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.02em;
+
+}
+.offers {
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+}
+.reviews, .specials {
+    border-bottom: 1px solid #dedbdc;
+    padding: 22px 0;
+}
+
+.contact {
+    padding: 22px 0;
 }
 .reviews p, .contact p {
-    width: 330px;
-    padding-bottom: 20px;
+    padding: 18px 0;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.02em;
 }
 .contact p {
     line-height: 26px;
@@ -91,15 +129,19 @@ section h3 {
 .specials ul {
     list-style: none;
     margin-left: -40px;
+    font-size: 18px;
+    
 }
-.specials ul a {
-    line-height: 35px;
+.specials ul li {
+    padding-top: 22px;
 }
 
 /***** FOOTER SECTION *****/
 footer {
     text-align: center;
     padding: 10px 0;
+    display: flex;
+    justify-content: center;
 }
 
 footer h3 {
