--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,9 @@ body {
     color: #000000;
     font-family: 'Montserrat', sans-serif;
     font-size: 1em;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    display: flex;
+    justify-content: center; 
+    /* align-items: center; */
 }
 a {
     color: #77a466;
@@ -22,6 +22,7 @@ a:hover {
 }
 
 .container {
+    width: 90%;
     display: flex;
     justify-content: center;
     flex-flow: column;
@@ -45,6 +46,7 @@ header h1 {
 }
 header h1 span {
     color: #77a466;
+    margin-right: 0.40em;
 }
 nav {
     display: flex;
