--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a:hover {
     display: flex;
     justify-content: center;
     flex-flow: column;
-    padding: 0 26px;
+    /* padding: 0 26px; */
 }
 
 /***** HEADER SECTION *****/
